--- a/test_toyres/gen_trans.ipynb
+++ b/test_toyres/gen_trans.ipynb
@@ -583,8 +583,8 @@
     "from astropy.table import Table\n",
     "from scipy.signal import savgol_filter, medfilt\n",
     "\n",
-    "mev_fullsky = Table.read('fullsky.csv', names=['wave', 'dfnu'])\n",
-    "mev_deep = Table.read('deep.csv', names=['wave', 'dfnu'])\n",
+    "mev_fullsky = Table.read('../fullsky.csv', names=['wave', 'dfnu'])\n",
+    "mev_deep = Table.read('../deep.csv', names=['wave', 'dfnu'])\n",
     "\n",
     "mev_fullsky['dfnu_smooth'] = savgol_filter(mev_fullsky['dfnu'], 5, 3)\n",
     "mev_deep['dfnu_smooth'] = savgol_filter(mev_deep['dfnu'], 5, 3)\n",
@@ -665,7 +665,7 @@
     }
    ],
    "source": [
-    "spec_example = Table.read('NGC_0584_spec.dat', format='ascii', names=['wave', 'flux', 'wave_o', 'source'])\n",
+    "spec_example = Table.read('../NGC_0584_spec.dat', format='ascii', names=['wave', 'flux', 'wave_o', 'source'])\n",
     "\n",
     "fig = plt.figure(figsize=(6,4))\n",
     "ax = fig.add_subplot(111)\n",
