with realistic response curve

--- a/test_toyres/gen_trans.ipynb
+++ b/test_toyres/gen_trans.ipynb
@@ -12,12 +12,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Intel MKL WARNING: Support of Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2) enabled only processors has been deprecated. Intel oneAPI Math Kernel Library 2025.0 will require Intel(R) Advanced Vector Extensions (Intel(R) AVX) instructions.\n",
+      "Intel MKL WARNING: Support of Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2) enabled only processors has been deprecated. Intel oneAPI Math Kernel Library 2025.0 will require Intel(R) Advanced Vector Extensions (Intel(R) AVX) instructions.\n"
+     ]
+    }
+   ],
    "source": [
+    "import os\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "try:\n",
+    "    print('EAZYCODE = '+os.getenv('EAZYCODE'))\n",
+    "except:\n",
+    "    os.environ['EAZYCODE'] = \"../spherex-photoz/eazy-photoz/\"  # the path where eazy-photoz was downloaded"
    ]
   },
   {
@@ -331,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -372,6 +387,26 @@
     "        f.write(latest_filters.filters[i].for_filter_file() + '\\n')\n",
     "    for i in append_filters:\n",
     "        f.write(latest_filters.filters[i].for_filter_file() + '\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/opt/anaconda3/envs/main/lib/python3.9/site-packages/eazy/data'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "utils.path_to_eazy_data()"
    ]
   },
   {
@@ -971,7 +1006,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
