separating entries and run

--- a/challenge/run.ipynb
+++ b/challenge/run.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -362,16 +362,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "124380"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1154,8 +1154,150 @@
     "with open('tempfilt.pickle', 'rb') as rfile:\n",
     "    tempfilt = pickle.load(rfile)\n",
     "ez = eazy.photoz.PhotoZ(param_file=None, translate_file=translate_filename,\n",
-    "                        zeropoint_file=None, params=params, tempfilt=tempfilt, )\n",
-    "ez.fit_catalog(ez.idx[:10], n_proc=8)"
+    "                        zeropoint_file=None, params=params, tempfilt=tempfilt, )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 649/649 [1:13:30<00:00,  6.80s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Compute best fits\n",
+      "fit_best: 44.1 s (n_proc=2,  NOBJ=29833)\n",
+      "Fit 4461.2 s (n_proc=16, NOBJ=10000)\n"
+     ]
+    }
+   ],
+   "source": [
+    "ez.fit_catalog(ez.idx[20000:30000], n_proc=16)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Get best fit coeffs & best redshifts\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/data1/hbahk/envs/main/lib/python3.9/site-packages/eazy/photoz.py:6144: RuntimeWarning: covariance is not symmetric positive-semidefinite.\n",
+      "  draws = np.random.multivariate_normal((coeffs_i*An)[ok_temp],\n",
+      "/data1/hbahk/envs/main/lib/python3.9/site-packages/eazy/photoz.py:6144: RuntimeWarning: covariance is not symmetric positive-semidefinite.\n",
+      "  draws = np.random.multivariate_normal((coeffs_i*An)[ok_temp],\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fit_best: 89.8 s (n_proc=2,  NOBJ=29833)\n",
+      "Get parameters (UBVJ=[153, 154, 155, 161], simple=False)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/29833 [00:00<?, ?it/s]/data1/hbahk/envs/main/lib/python3.9/site-packages/eazy/photoz.py:6144: RuntimeWarning: covariance is not symmetric positive-semidefinite.\n",
+      "  draws = np.random.multivariate_normal((coeffs_i*An)[ok_temp],\n",
+      "100%|██████████| 29833/29833 [22:43<00:00, 21.88it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " Couldn't find template parameters file BROWN_COSMOS.template.fits for population synthesis \n",
+      " calculations.\n",
+      "            \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/data1/hbahk/envs/main/lib/python3.9/site-packages/eazy/photoz.py:4111: RuntimeWarning: invalid value encountered in divide\n",
+      "  coeffs_norm = (coeffs_norm.T/coeffs_norm.sum(axis=1)).T\n",
+      "/data1/hbahk/envs/main/lib/python3.9/site-packages/astropy/units/quantity.py:666: RuntimeWarning: invalid value encountered in divide\n",
+      "  result = super().__array_ufunc__(function, method, *arrays, **kwargs)\n",
+      "/data1/hbahk/envs/main/lib/python3.9/site-packages/eazy/photoz.py:4146: RuntimeWarning: invalid value encountered in divide\n",
+      "  draws_norm = (draws_norm.T/draws_norm.sum(axis=2).T).T\n",
+      "100%|██████████| 29833/29833 [1:07:45<00:00,  7.34it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Abs Mag filters [271, 272, 274]\n",
+      "Rest-frame filters:\n",
+      "~~~~~~~~~~~~~~~~~~~ \n",
+      "   0 RestUV/Tophat_1700_200.dat lambda_c= 1.6989e+03 AB-Vega=1.916 w95=190.7\n",
+      "   1 RestUV/Tophat_2200_200.dat lambda_c= 2.1993e+03 AB-Vega=1.691 w95=191.1\n",
+      "   2 RestUV/Tophat_2800_200.dat lambda_c= 2.7996e+03 AB-Vega=1.465 w95=191.2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 3/3 [12:11<00:00, 243.91s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " ... rest-frame flux: 732.8 s (n_proc=3,  NOBJ=29930)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/data1/hbahk/envs/main/lib/python3.9/site-packages/astropy/cosmology/flrw/base.py:1343: RuntimeWarning: divide by zero encountered in log10\n",
+      "  val = 5.0 * np.log10(abs(self.luminosity_distance(z).value)) + 25.0\n",
+      "/data1/hbahk/envs/main/lib/python3.9/site-packages/eazy/photoz.py:3960: RuntimeWarning: divide by zero encountered in log10\n",
+      "  obsm = self.param.params['PRIOR_ABZP'] - 2.5*np.log10(rf[:,i,:])\n",
+      "/data1/hbahk/envs/main/lib/python3.9/site-packages/eazy/photoz.py:3960: RuntimeWarning: invalid value encountered in log10\n",
+      "  obsm = self.param.params['PRIOR_ABZP'] - 2.5*np.log10(rf[:,i,:])\n",
+      "WARNING: VerifyWarning: Keyword name 'TEMP_ERR_FILE' is greater than 8 characters or contains characters not allowed by the FITS standard; a HIERARCH card will be created. [astropy.io.fits.card]\n",
+      "WARNING: VerifyWarning: Keyword name 'TEMP_ERR_A2' is greater than 8 characters or contains characters not allowed by the FITS standard; a HIERARCH card will be created. [astropy.io.fits.card]\n",
+      "WARNING: VerifyWarning: Keyword name 'PRIOR_FILTER' is greater than 8 characters or contains characters not allowed by the FITS standard; a HIERARCH card will be created. [astropy.io.fits.card]\n",
+      "WARNING: VerifyWarning: Keyword name 'PRIOR_ABZP' is greater than 8 characters or contains characters not allowed by the FITS standard; a HIERARCH card will be created. [astropy.io.fits.card]\n",
+      "WARNING: VerifyWarning: Keyword name 'IGM_SCALE_TAU' is greater than 8 characters or contains characters not allowed by the FITS standard; a HIERARCH card will be created. [astropy.io.fits.card]\n",
+      "WARNING: VerifyWarning: Keyword name 'APPLY_IGM' is greater than 8 characters or contains characters not allowed by the FITS standard; a HIERARCH card will be created. [astropy.io.fits.card]\n",
+      "WARNING: VerifyWarning: Keyword name 'TEMPLATES_FILE' is greater than 8 characters or contains characters not allowed by the FITS standard; a HIERARCH card will be created. [astropy.io.fits.card]\n",
+      "WARNING: VerifyWarning: Keyword name 'ZBEST_USER' is greater than 8 characters or contains characters not allowed by the FITS standard; a HIERARCH card will be created. [astropy.io.fits.card]\n",
+      "WARNING: VerifyWarning: Keyword name 'ZBEST_AT_ZSPEC' is greater than 8 characters or contains characters not allowed by the FITS standard; a HIERARCH card will be created. [astropy.io.fits.card]\n",
+      "WARNING: VerifyWarning: Keyword name 'ZML_WITH_PRIOR' is greater than 8 characters or contains characters not allowed by the FITS standard; a HIERARCH card will be created. [astropy.io.fits.card]\n",
+      "WARNING: VerifyWarning: Keyword name 'ZML_WITH_BETA_PRIOR' is greater than 8 characters or contains characters not allowed by the FITS standard; a HIERARCH card will be created. [astropy.io.fits.card]\n"
+     ]
+    }
+   ],
+   "source": [
+    "zout, hdu = ez.standard_output(prior=True, beta_prior=False)\n",
+    "zout.write('output.fits', overwrite=True)"
    ]
   },
   {
@@ -1164,8 +1306,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "zout, hdu = ez.standard_output(prior=True, beta_prior=False)\n",
-    "zout.write('output.fits', overwrite=True)"
+    "with open('tempfilt.pickle', 'rb') as rfile:\n",
+    "    tempfilt = pickle.load(rfile)\n",
+    "\n",
+    "for i in range(17):\n",
+    "    start_id = i * 10000\n",
+    "    end_id = (i+1) * 10000\n",
+    "\n",
+    "    ez = eazy.photoz.PhotoZ(param_file=None, translate_file=translate_filename,\n",
+    "                            zeropoint_file=None, params=params, tempfilt=tempfilt, )\n",
+    "    \n",
+    "    if end_id > len(ez.idx):\n",
+    "        end_id = len(ez.idx)\n",
+    "        \n",
+    "    ez.fit_catalog(ez.idx[start_id:end_id], n_proc=16)\n",
+    "    zout, hdu = ez.standard_output(prior=True, beta_prior=False)\n",
+    "    zout[start_id:end_id].write(dir_output/f'output{i:02d}.fits', overwrite=True)\n",
+    "    phdu = fits.PrimaryHDU(data=ez.lnp[start_id:end_id])\n",
+    "    gridhdu = fits.ImageHDU(data=ez.zgrid)\n",
+    "    hdul = fits.HDUList([phdu, gridhdu])\n",
+    "    hdul.writeto(dir_output/f'lnp{i:02d}.fits', overwrite=True)\n",
+    "    del ez, zout, hdu, phdu, gridhdu, hdul\n",
+    "    gc.collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Filename: lnp5000.fits\n",
+      "No.    Name      Ver    Type      Cards   Dimensions   Format\n",
+      "  0  PRIMARY       1 PrimaryHDU       6   (649, 166041)   float32   \n",
+      "  1                1 ImageHDU         6   (649,)   float32   \n"
+     ]
+    }
+   ],
+   "source": [
+    "from astropy.io import fits\n",
+    "hdul = fits.open('lnp5000.fits')\n",
+    "hdul.info()"
    ]
   }
  ],
