reduce the spherex filter responce file

--- a/challenge/combine_spherex_phot.ipynb
+++ b/challenge/combine_spherex_phot.ipynb
@@ -245,8 +245,9 @@
    ],
    "source": [
     "from utils import make_eazy_filters_spherex\n",
-    "res_nocut = make_eazy_filters_spherex(WD/'data'/'fiducial_filters_102',\n",
-    "                                      'FILTERS+spherex_nocut.res', threshold=0)"
+    "# res_nocut = make_eazy_filters_spherex(WD/'data'/'fiducial_filters_102',\n",
+    "#                                       'FILTERS+spherex_nocut.res', threshold=0)\n",
+    "res_nocut = eazy.filters.FilterFile(WD/'FILTERS+spherex_nocut.res')"
    ]
   },
   {
@@ -803,6 +804,24 @@
     "ax.set_xlim(np.min(wave_rdp), np.max(wave_rdp))\n",
     "\n",
     "print(filt.pivot - pivot, pivot- pivot_clip, pivot_clip - pivot_rdp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 276,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wrote <FILTERS+spherex_reduced.res[.info]>\n"
+     ]
+    }
+   ],
+   "source": [
+    "res_nocut = make_eazy_filters_spherex(WD/'data'/'fiducial_filters_102',\n",
+    "                                      'FILTERS+spherex_reduced.res', epsilon_rdp=1e-5)"
    ]
   }
  ],
