--- a/challenge/run.ipynb
+++ b/challenge/run.ipynb
@@ -158,14 +158,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "params = {}\n",
     "params['FILTERS_RES']       = \"FILTERS+spherex_reduced.res\"\n",
     "params['TEMPLATES_FILE']    = \"BROWN_COSMOS.template\"\n",
-    "params['WAVELENGTH_FILE ']  = \"../lambda_spherex.def\"\n",
+    "params['WAVELENGTH_FILE ']  = \"lambda_for_spherex.def\" # this has no effect on eazy-py!!\n",
     "params['TEMP_ERR_FILE']     = \"../template_error_cosmos2020.txt\"\n",
     "params['TEMP_ERR_A2']       = 0.0 # nullify the template error\n",
     "\n",
@@ -1113,18 +1113,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.7"
   }
  },
  "nbformat": 4,
