--- a/challenge/run.ipynb
+++ b/challenge/run.ipynb
@@ -158,13 +158,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "params = {}\n",
     "params['FILTERS_RES']       = \"FILTERS+spherex_reduced.res\"\n",
-    "params['TEMPLATES_FILE']    = \"BROWN_COSMOS.template\"\n",
+    "params['TEMPLATES_FILE']    = \"spherex_brown_cosmos.templates\"\n",
     "params['WAVELENGTH_FILE ']  = \"lambda_for_spherex.def\" # this has no effect on eazy-py!!\n",
     "params['TEMP_ERR_FILE']     = \"../template_error_cosmos2020.txt\"\n",
     "params['TEMP_ERR_A2']       = 0.0 # nullify the template error\n",
@@ -187,7 +187,7 @@
     "\n",
     "params['APPLY_PRIOR']       = False\n",
     "params['PRIOR_FILE']        = \"../prior_K_TAO.dat\"\n",
-    "params['PRIOR_FILTER']      = 163  # SPHEREx band corresponding to 2.2um\n",
+    "params['PRIOR_FILTER']      = 466  # SPHEREx band corresponding to 2.2um\n",
     "params['PRIOR_ABZP']        = 23.9\n",
     "params['PRIOR_FLOOR']       = 0.01\n",
     "\n",
@@ -197,7 +197,7 @@
     "params['Z_STEP']            = 0.001\n",
     "params['Z_STEP_TYPE']       = 1\n",
     "\n",
-    "translate_filename = 'spherex.translate'"
+    "translate_filename = 'dummy.translate'"
    ]
   },
   {
@@ -1113,6 +1113,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
