--- a/challenge/test_run.ipynb
+++ b/challenge/test_run.ipynb
@@ -6433,7 +6433,7 @@
     "\n",
     "cat['z_phot'] = ez.zbest\n",
     "cat['z_phot_chi2'] = ez.chi2_best\n",
-    "cat.write(dir_output/'simple_output_i{imag:02d}.fits', overwrite=True)"
+    "cat.write(dir_output/f'simple_output_i{imag:02d}.fits', overwrite=True)"
    ]
   },
   {
