--- a/challenge/combine_spherex_phot.ipynb
+++ b/challenge/combine_spherex_phot.ipynb
@@ -205,7 +205,7 @@
     "where $f_i$ is the flux in the $i$-th filter, and $w_i$ is the weight\n",
     "of the $i$-th filter,\n",
     "\n",
-    "$$w_i = \\int T_i * \\lambda d \\lambda$$\n",
+    "$$w_i = \\int T_i \\lambda d \\lambda$$\n",
     "\n",
     "where $T_i$ is the throughput of the $i$-th filter. The error of the\n",
     "combined flux is given by:\n",
