--- a/challenge/test_run2.ipynb
+++ b/challenge/test_run2.ipynb
@@ -219,7 +219,16 @@
      "output_type": "stream",
      "text": [
       "1946it [00:00, 2234.15it/s]\n",
-      "  8%|▊         | 154/1946 [00:53<12:14,  2.44it/s]"
+      "100%|██████████| 1946/1946 [13:53<00:00,  2.33it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Compute best fits\n",
+      "fit_best: 0.8 s (n_proc=1,  NOBJ=662)\n",
+      "Fit 835.6 s (n_proc=1, NOBJ=662)\n"
      ]
     }
    ],
