--- a/challenge/combine_spherex_phot.ipynb
+++ b/challenge/combine_spherex_phot.ipynb
@@ -519,61 +519,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from utils import fnu_to_flam\n",
-    "filters = res_sphx_reduced\n",
-    "fluxes = fnus[:10]\n",
-    "errors = efnus[:10]\n",
-    "pivots = np.array([filt.pivot for filt in filters])\n",
-    "f = fnu_to_flam(pivots, fluxes)\n",
-    "e = fnu_to_flam(pivots, errors)\n",
-    "ftest = fnu_to_flam(pivots, fluxes[0])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fluxes = fnus[:10]\n",
-    "errors = efnus[:10]\n",
-    "pivots = np.array([filt.pivot for filt in filters])\n",
-    "fluxes = fnu_to_flam(pivots, fluxes)\n",
-    "errors = fnu_to_flam(pivots, errors)\n",
-    "\n",
-    "weights = np.empty(len(filters), dtype=float)\n",
-    "for i, filt in enumerate(filters):\n",
-    "    if not hasattr(filt, \"weight\"):\n",
-    "        filt.weight = np.trapz(filt.throughput * filt.wave, filt.wave)\n",
-    "    weights[i] = filt.weight\n",
-    "if fluxes.shape[0] != len(filters):\n",
-    "    flux_combined = np.average(fluxes, weights=weights, axis=1)\n",
-    "else:\n",
-    "    flux_combined = np.average(fluxes, weights=weights, axis=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "1.234909335478931e-19"
-      ]
-     },
-     "execution_count": 142,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wrote <FILTERS+spherex_reduced_fullband_halfband.res[.info]>\n"
+     ]
     }
    ],
    "source": [
-    "flux_combined"
+    "res_reduced = eazy.filters.FilterFile(WD/'FILTERS+spherex_reduced.res')\n",
+    "res_fullband = eazy.filters.FilterFile(WD/'spherex_combined_fullband.res')\n",
+    "res_halfband = eazy.filters.FilterFile(WD/'spherex_combined_halfband.res')\n",
+    "\n",
+    "for filt in res_fullband.filters:\n",
+    "    res_reduced.filters.append(filt)\n",
+    "for filt in res_halfband.filters:\n",
+    "    res_reduced.filters.append(filt)\n",
+    "    \n",
+    "res_reduced.write('FILTERS+spherex_reduced_fullband_halfband.res')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utils import combine_photometries, reduce_filter\n",
+    "\n",
+    "flux = fnus\n",
+    "erro = efnus\n",
+    "\n",
+    "idx_sphx_reduced = res_reduced.search('SPHEREx', verbose=False)\n",
+    "res_sphx_reduced = np.array(res_reduced.filters)[idx_sphx_reduced]\n",
+    "\n",
+    "res_combined = eazy.filters.FilterFile(WD/'FILTERS+spherex_reduced_fullband_halfband.res')\n",
+    "\n",
+    "filters = res_sphx_reduced\n",
+    "for i in range(6):\n",
+    "    start = 17*i\n",
+    "    end = 17*(i+1)\n",
+    "    band = i+1\n",
+    "    fc, ec, pc = combine_photometries(filters[start:end], flux[:,start:end], erro[:,start:end])\n",
+    "    idx_bandfilt = res_combined.search(f'SPHEREx_Band{band}_full', verbose=False)[0]\n",
+    "    syn[f'F{idx_bandfilt+1}'] = fc\n",
+    "    syn[f'E{idx_bandfilt+1}'] = ec\n",
+    "    syn[f'F{idx_bandfilt+1}'].format = '.2f'\n",
+    "    syn[f'E{idx_bandfilt+1}'].format = '.2f'\n",
+    "    \n",
+    "    \n",
+    "for i in range(12):\n",
+    "    band = i//2 + 1\n",
+    "    br = 1-(i+1)%2 # 0: red, 1: blue\n",
+    "    brstr = 'red' if br == 1 else 'blue'\n",
+    "    start = 17*(band-1) + 8*br\n",
+    "    end = start + 9\n",
+    "    fc, ec, pc = combine_photometries(filters[start:end], flux[:,start:end], erro[:,start:end])\n",
+    "    idx_bandfilt = res_combined.search(f'SPHEREx_Band{band}_half_{brstr}', verbose=False)[0]\n",
+    "    syn[f'F{idx_bandfilt+1}'] = fc\n",
+    "    syn[f'E{idx_bandfilt+1}'] = ec\n",
+    "    syn[f'F{idx_bandfilt+1}'].format = '.2f'\n",
+    "    syn[f'E{idx_bandfilt+1}'].format = '.2f'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "syn.write(WD/'data/spherex_synphot_combined.dat', format='ascii.commented_header', overwrite=True)"
    ]
   },
   {
