--- a/7ds_challenge/make_eazy_filtres.ipynb
+++ b/7ds_challenge/make_eazy_filtres.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -21,31 +21,33 @@
     "\n",
     "\n",
     "WD = Path.cwd()\n",
-    "FILTERDIR = WD / '7DT_filters_v2' \n",
-    "filtpaths = list(FILTERDIR.glob('*.csv'))\n",
+    "FILTERDIR = WD / \"7DT_filters_v2\"\n",
+    "filtpaths = list(FILTERDIR.glob(\"*.csv\"))\n",
     "\n",
-    "path_default_filter = Path(path_to_eazy_data()) / 'FILTER.RES.latest'\n",
+    "path_default_filter = Path(path_to_eazy_data()) / \"FILTER.RES.latest\"\n",
     "\n",
-    "path_output_filter = WD / 'FILTER.RES+7DT.res'\n",
+    "path_output_filter = WD / \"FILTER.RES+7DT.res\"\n",
     "\n",
     "latest_filters = filters.FilterFile(path_default_filter)\n",
-    "tempfile = Path('tempfile')\n",
-    "with open(tempfile, 'w') as f:\n",
+    "tempfile = Path(\"tempfile\")\n",
+    "with open(tempfile, \"w\") as f:\n",
     "    for filtpath in filtpaths:\n",
-    "            filt = Table.read(filtpath,\n",
-    "                                format='ascii.csv',\n",
-    "                                names=['id', 'wave', 'throughput'])\n",
-    "            res = filters.FilterDefinition(wave=filt['wave'],\n",
-    "                                            throughput=filt['throughput'],\n",
-    "                                            name=f'7DT_{filtpath.stem}')\n",
-    "            f.write(res.for_filter_file() + '\\n')\n",
+    "        filt = Table.read(\n",
+    "            filtpath, format=\"ascii.csv\", names=[\"id\", \"wave\", \"throughput\"]\n",
+    "        )\n",
+    "        res = filters.FilterDefinition(\n",
+    "            wave=filt[\"wave\"] * 10, # Convert to Angstrom from nm\n",
+    "            throughput=filt[\"throughput\"],\n",
+    "            name=f\"7DT_{filtpath.stem}\",\n",
+    "        )\n",
+    "        f.write(res.for_filter_file() + \"\\n\")\n",
     "\n",
-    "temp_filters = filters.FilterFile('tempfile')\n",
+    "temp_filters = filters.FilterFile(\"tempfile\")\n",
     "tempfile.unlink()\n",
     "\n",
     "for filt in temp_filters.filters:\n",
     "    latest_filters.filters.append(filt)\n",
-    "    \n",
+    "\n",
     "latest_filters.write(path_output_filter.as_posix())"
    ]
   }
