--- a/7ds_challenge/make_eazy_feeds.ipynb
+++ b/7ds_challenge/make_eazy_feeds.ipynb
@@ -348,6 +348,46 @@
    "source": [
     "inputtab"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.016577"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.median(base['E_B-V_'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.001843765724026"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "10**(0.4 * 0.002)"
+   ]
   }
  ],
  "metadata": {
