--- a/7ds_challenge/make_eazy_feeds.ipynb
+++ b/7ds_challenge/make_eazy_feeds.ipynb
@@ -164,15 +164,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div><i>Table length=166041</i>\n",
-       "<table id=\"table139693055758048\" class=\"table-striped table-bordered table-condensed\">\n",
-       "<thead><tr><th>ID</th><th>HSC_i_MAG</th><th>zpsec</th><th>FLAG_ML</th><th>ra</th><th>dec</th><th>E_B-V_</th><th>Classic</th><th>EZzphot</th></tr></thead>\n",
+       "<table id=\"table139693055414960\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<thead><tr><th>ID</th><th>HSC_i_MAG</th><th>z_psec</th><th>FLAG_ML</th><th>ra</th><th>dec</th><th>E_B-V_</th><th>Classic</th><th>EZzphot</th></tr></thead>\n",
        "<thead><tr><th>int64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>int32</th><th>float64</th></tr></thead>\n",
        "<tr><td>12</td><td>23.990103981421147</td><td>0.707</td><td>0.0</td><td>150.47679031</td><td>2.33150699</td><td>0.014723000000000002</td><td>962809</td><td>0.6809810000000001</td></tr>\n",
        "<tr><td>27</td><td>24.875468381594267</td><td>0.7751</td><td>0.0</td><td>150.71248825</td><td>1.79210579</td><td>0.018367</td><td>387749</td><td>0.7748600000000001</td></tr>\n",
@@ -199,7 +199,7 @@
       ],
       "text/plain": [
        "<Table length=166041>\n",
-       "  ID       HSC_i_MAG       zpsec  ... Classic       EZzphot      \n",
+       "  ID       HSC_i_MAG       z_psec ... Classic       EZzphot      \n",
        "int64       float64       float64 ...  int32        float64      \n",
        "------ ------------------ ------- ... ------- -------------------\n",
        "    12 23.990103981421147   0.707 ...  962809  0.6809810000000001\n",
@@ -225,7 +225,7 @@
        "601307 23.419138966614625  0.9887 ...  517960  0.9661940000000001"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +240,7 @@
     "datpd = datatab[\"source_id\", \"HSC_i_MAG\", \"lp_zBEST\", \"FLAG_ML\"].to_pandas()\n",
     "df = datpd.merge(\n",
     "    cospd.rename(columns={\"Farmer\": \"source_id\", \"RAJ2000\": \"ra\", \"DEJ2000\": \"dec\"})\n",
-    ").rename(columns={\"source_id\": \"ID\", \"lp_zBEST\": \"zpsec\"})\n",
+    ").rename(columns={\"source_id\": \"ID\", \"lp_zBEST\": \"z_psec\"})\n",
     "\n",
     "base = Table.from_pandas(df)\n",
     "base"
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,22 +449,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.001843765724026"
+       "0.9537718931591848"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "10**(0.4 * 0.002)"
+    "10**(-0.4 * 0.016577*3.1)"
    ]
   }
  ],
