--- a/7ds_challenge/run_subset.ipynb
+++ b/7ds_challenge/run_subset.ipynb
@@ -1054,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1071,7 +1071,7 @@
     "\n",
     "params['CATALOG_FILE']      = \"input/input_RIS_subset.csv\" \n",
     "\n",
-    "dir_output = WD/\"output\"/\"output_001_RIS_sub_extcorrcat\"\n",
+    "dir_output = WD/\"output\"/\"output_nored_001_RIS_sub_extcorrcat\"\n",
     "\n",
     "if not dir_output.exists():\n",
     "    dir_output.mkdir(parents=True)\n",
@@ -2278,26 +2278,19 @@
     "with open('tempfilt_nored_001.pickle', 'rb') as rfile:\n",
     "    tempfilt = pickle.load(rfile)\n",
     "\n",
-    "for i in range(17):\n",
-    "    start_id = i * 10000\n",
-    "    end_id = (i+1) * 10000\n",
+    "ez = eazy.photoz.PhotoZ(param_file=None, translate_file=translate_filename,\n",
+    "                        zeropoint_file=None, params=params, tempfilt=tempfilt, )\n",
     "\n",
-    "    ez = eazy.photoz.PhotoZ(param_file=None, translate_file=translate_filename,\n",
-    "                            zeropoint_file=None, params=params, tempfilt=tempfilt, )\n",
-    "    \n",
-    "    if end_id > len(ez.idx):\n",
-    "        end_id = len(ez.idx)\n",
-    "    \n",
-    "    ez.fit_catalog(ez.idx[start_id:end_id], n_proc=2, prior=False)\n",
-    "    \n",
-    "    zout, hdu = ez.standard_output(prior=False, beta_prior=False)\n",
-    "    zout[start_id:end_id].write(dir_output/f'output{i:02d}.fits', overwrite=True)\n",
-    "    phdu = fits.PrimaryHDU(data=ez.lnp[start_id:end_id])\n",
-    "    gridhdu = fits.ImageHDU(data=ez.zgrid)\n",
-    "    hdul = fits.HDUList([phdu, gridhdu])\n",
-    "    hdul.writeto(dir_output/f'lnp{i:02d}.fits', overwrite=True)\n",
-    "    del ez, zout, hdu, phdu, gridhdu, hdul\n",
-    "    gc.collect()"
+    "ez.fit_catalog(ez.idx, n_proc=2, prior=False)\n",
+    "\n",
+    "zout, hdu = ez.standard_output(prior=False, beta_prior=False)\n",
+    "zout.write(dir_output/'output.fits', overwrite=True)\n",
+    "phdu = fits.PrimaryHDU(data=ez.lnp)\n",
+    "gridhdu = fits.ImageHDU(data=ez.zgrid)\n",
+    "hdul = fits.HDUList([phdu, gridhdu])\n",
+    "hdul.writeto(dir_output/'lnp.fits', overwrite=True)\n",
+    "del ez, zout, hdu, phdu, gridhdu, hdul\n",
+    "gc.collect()"
    ]
   },
   {
@@ -2312,26 +2305,19 @@
     "with open('tempfilt_reddened_001.pickle', 'rb') as rfile:\n",
     "    tempfilt = pickle.load(rfile)\n",
     "\n",
-    "for i in range(17):\n",
-    "    start_id = i * 10000\n",
-    "    end_id = (i+1) * 10000\n",
+    "ez = eazy.photoz.PhotoZ(param_file=None, translate_file=translate_filename,\n",
+    "                        zeropoint_file=None, params=params, tempfilt=tempfilt, )\n",
     "\n",
-    "    ez = eazy.photoz.PhotoZ(param_file=None, translate_file=translate_filename,\n",
-    "                            zeropoint_file=None, params=params, tempfilt=tempfilt, )\n",
-    "    \n",
-    "    if end_id > len(ez.idx):\n",
-    "        end_id = len(ez.idx)\n",
-    "    \n",
-    "    ez.fit_catalog(ez.idx[start_id:end_id], n_proc=2, prior=False)\n",
-    "    \n",
-    "    zout, hdu = ez.standard_output(prior=False, beta_prior=False)\n",
-    "    zout[start_id:end_id].write(dir_output/f'output{i:02d}.fits', overwrite=True)\n",
-    "    phdu = fits.PrimaryHDU(data=ez.lnp[start_id:end_id])\n",
-    "    gridhdu = fits.ImageHDU(data=ez.zgrid)\n",
-    "    hdul = fits.HDUList([phdu, gridhdu])\n",
-    "    hdul.writeto(dir_output/f'lnp{i:02d}.fits', overwrite=True)\n",
-    "    del ez, zout, hdu, phdu, gridhdu, hdul\n",
-    "    gc.collect()"
+    "ez.fit_catalog(ez.idx, n_proc=2, prior=False)\n",
+    "\n",
+    "zout, hdu = ez.standard_output(prior=False, beta_prior=False)\n",
+    "zout.write(dir_output/'output.fits', overwrite=True)\n",
+    "phdu = fits.PrimaryHDU(data=ez.lnp)\n",
+    "gridhdu = fits.ImageHDU(data=ez.zgrid)\n",
+    "hdul = fits.HDUList([phdu, gridhdu])\n",
+    "hdul.writeto(dir_output/'lnp.fits', overwrite=True)\n",
+    "del ez, zout, hdu, phdu, gridhdu, hdul\n",
+    "gc.collect()"
    ]
   },
   {
