--- a/7ds_challenge/make_eazy_feeds.ipynb
+++ b/7ds_challenge/make_eazy_feeds.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,16 +102,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "425.51512304174685"
+       "4255.1512304174685"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
        "       431, 432, 433, 434, 435, 436, 437])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
        "       432, 433, 434, 435, 436, 437, 438])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,14 +164,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div><i>Table length=166041</i>\n",
-       "<table id=\"table139693055414960\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140680137940176\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>ID</th><th>HSC_i_MAG</th><th>z_psec</th><th>FLAG_ML</th><th>ra</th><th>dec</th><th>E_B-V_</th><th>Classic</th><th>EZzphot</th></tr></thead>\n",
        "<thead><tr><th>int64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>int32</th><th>float64</th></tr></thead>\n",
        "<tr><td>12</td><td>23.990103981421147</td><td>0.707</td><td>0.0</td><td>150.47679031</td><td>2.33150699</td><td>0.014723000000000002</td><td>962809</td><td>0.6809810000000001</td></tr>\n",
@@ -225,7 +225,7 @@
        "601307 23.419138966614625  0.9887 ...  517960  0.9661940000000001"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,6 +264,8 @@
     "]\n",
     "surveylabels = [\"RIS\", \"WFS\", \"IMS\"]\n",
     "\n",
+    "np.random.seed(185)\n",
+    "selectionid = np.random.choice(len(base), 10000, replace=False)\n",
     "for fl, el, sl in zip(fluxlabels, errolabels, surveylabels):\n",
     "    fiducial_flux_array = np.array(\n",
     "        [np.fromstring(row[1:-1], dtype=np.float64, sep=\",\") for row in datatab[fl]]\n",
@@ -277,8 +279,6 @@
     "    inputtab.write(INPUTDIR / f\"input_{sl}.csv\", format=\"ascii.csv\", overwrite=True)\n",
     "    \n",
     "    # making a subset of the input catalog for testing\n",
-    "    np.random.seed(185)\n",
-    "    selectionid = np.random.choice(len(inputtab), 10000, replace=False)\n",
     "    subsettab = inputtab[selectionid]\n",
     "    subsettab.write(INPUTDIR / f\"input_{sl}_subset.csv\", format=\"ascii.csv\", overwrite=True)"
    ]
