add other cases for other surveys

--- a/7ds_challenge/run_subset.ipynb
+++ b/7ds_challenge/run_subset.ipynb
@@ -2391,6 +2391,237 @@
     "del ez, zout, hdu, phdu, gridhdu, hdul\n",
     "gc.collect()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fit_and_save_result(params, tempfilt):\n",
+    "    dir_output = Path(params['OUTPUT_DIRECTORY'])\n",
+    "    ez = eazy.photoz.PhotoZ(param_file=None, translate_file=translate_filename,\n",
+    "                            zeropoint_file=None, params=params, tempfilt=tempfilt, )\n",
+    "\n",
+    "    ez.fit_catalog(ez.idx, n_proc=2, prior=False)\n",
+    "\n",
+    "    zout, hdu = ez.standard_output(prior=False, beta_prior=False)\n",
+    "    zout.write(dir_output/'output.fits', overwrite=True)\n",
+    "    phdu = fits.PrimaryHDU(data=ez.lnp)\n",
+    "    gridhdu = fits.ImageHDU(data=ez.zgrid)\n",
+    "    hdul = fits.HDUList([phdu, gridhdu])\n",
+    "    hdul.writeto(dir_output/'lnp.fits', overwrite=True)\n",
+    "    del ez, zout, hdu, phdu, gridhdu, hdul\n",
+    "    gc.collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params = params_reddened_001_RIS_sub_extcorrcat\n",
+    "with open('tempfilt_reddened_001_extcorrcat.pickle', 'rb') as rfile:\n",
+    "    tempfilt = pickle.load(rfile)\n",
+    "\n",
+    "fit_and_save_result(params, tempfilt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params = params_nored_001_RIS_sub_extcorrcat\n",
+    "with open('tempfilt_nored_001_extcorrcat.pickle', 'rb') as rfile:\n",
+    "    tempfilt = pickle.load(rfile)\n",
+    "\n",
+    "fit_and_save_result(params, tempfilt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params = params_nored_001_RIS_sub.copy()\n",
+    "params['CATALOG_FILE'] = \"input/input_WFS_subset.csv\"\n",
+    "dir_output = WD/\"output\"/\"output_nored_001_WFS_sub_extcorrcat\"\n",
+    "if not dir_output.exists():\n",
+    "    dir_output.mkdir(parents=True)\n",
+    "params['OUTPUT_DIRECTORY']  = dir_output.as_posix()\n",
+    "params_nored_001_WFS_sub = params.copy()\n",
+    "\n",
+    "params = params_nored_001_RIS_sub.copy()\n",
+    "params['CATALOG_FILE'] = \"input/input_IMS_subset.csv\"\n",
+    "dir_output = WD/\"output\"/\"output_nored_001_IMS_sub_extcorrcat\"\n",
+    "if not dir_output.exists():\n",
+    "    dir_output.mkdir(parents=True)\n",
+    "params['OUTPUT_DIRECTORY']  = dir_output.as_posix()\n",
+    "params_nored_001_IMS_sub = params.copy()\n",
+    "\n",
+    "params = params_reddened_001_RIS_sub.copy()\n",
+    "params['CATALOG_FILE'] = \"input/input_WFS_subset.csv\"\n",
+    "dir_output = WD/\"output\"/\"output_reddened_001_WFS_sub_extcorrcat\"\n",
+    "if not dir_output.exists():\n",
+    "    dir_output.mkdir(parents=True)\n",
+    "params['OUTPUT_DIRECTORY']  = dir_output.as_posix()\n",
+    "params_reddened_001_WFS_sub = params.copy()\n",
+    "\n",
+    "params = params_reddened_001_RIS_sub.copy()\n",
+    "params['CATALOG_FILE'] = \"input/input_IMS_subset.csv\"\n",
+    "dir_output = WD/\"output\"/\"output_reddened_001_IMS_sub_extcorrcat\"\n",
+    "if not dir_output.exists():\n",
+    "    dir_output.mkdir(parents=True)\n",
+    "params['OUTPUT_DIRECTORY']  = dir_output.as_posix()\n",
+    "params_reddened_001_IMS_sub = params.copy()\n",
+    "\n",
+    "params = params_nored_001_RIS_sub_extcorrcat.copy()\n",
+    "params['CATALOG_FILE'] = \"input/input_WFS_subset.csv\"\n",
+    "dir_output = WD/\"output\"/\"output_nored_001_WFS_sub_extcorrcat\"\n",
+    "if not dir_output.exists():\n",
+    "    dir_output.mkdir(parents=True)\n",
+    "params['OUTPUT_DIRECTORY']  = dir_output.as_posix()\n",
+    "params_nored_001_WFS_sub_extcorrcat = params.copy()\n",
+    "\n",
+    "params = params_nored_001_RIS_sub_extcorrcat.copy()\n",
+    "params['CATALOG_FILE'] = \"input/input_IMS_subset.csv\"\n",
+    "dir_output = WD/\"output\"/\"output_nored_001_IMS_sub_extcorrcat\"\n",
+    "if not dir_output.exists():\n",
+    "    dir_output.mkdir(parents=True)\n",
+    "params['OUTPUT_DIRECTORY']  = dir_output.as_posix()\n",
+    "params_nored_001_IMS_sub_extcorrcat = params.copy()\n",
+    "\n",
+    "params = params_reddened_001_RIS_sub_extcorrcat.copy()\n",
+    "params['CATALOG_FILE'] = \"input/input_WFS_subset.csv\"\n",
+    "dir_output = WD/\"output\"/\"output_reddened_001_WFS_sub_extcorrcat\"\n",
+    "if not dir_output.exists():\n",
+    "    dir_output.mkdir(parents=True)\n",
+    "params['OUTPUT_DIRECTORY']  = dir_output.as_posix()\n",
+    "params_reddened_001_WFS_sub_extcorrcat = params.copy()\n",
+    "\n",
+    "params = params_reddened_001_RIS_sub_extcorrcat.copy()\n",
+    "params['CATALOG_FILE'] = \"input/input_IMS_subset.csv\"\n",
+    "dir_output = WD/\"output\"/\"output_reddened_001_IMS_sub_extcorrcat\"\n",
+    "if not dir_output.exists():\n",
+    "    dir_output.mkdir(parents=True)\n",
+    "params['OUTPUT_DIRECTORY']  = dir_output.as_posix()\n",
+    "params_reddened_001_IMS_sub_extcorrcat = params.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params = params_nored_001_IMS_sub\n",
+    "with open('tempfilt_nored_001.pickle', 'rb') as rfile:\n",
+    "    tempfilt = pickle.load(rfile)\n",
+    "\n",
+    "fit_and_save_result(params, tempfilt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params = params_reddened_001_IMS_sub\n",
+    "with open('tempfilt_reddened_001.pickle', 'rb') as rfile:\n",
+    "    tempfilt = pickle.load(rfile)\n",
+    "\n",
+    "fit_and_save_result(params, tempfilt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params = params_nored_001_IMS_sub_extcorrcat\n",
+    "with open('tempfilt_nored_001_extcorrcat.pickle', 'rb') as rfile:\n",
+    "    tempfilt = pickle.load(rfile)\n",
+    "    \n",
+    "fit_and_save_result(params, tempfilt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params = params_reddened_001_IMS_sub_extcorrcat\n",
+    "with open('tempfilt_reddened_001_extcorrcat.pickle', 'rb') as rfile:\n",
+    "    tempfilt = pickle.load(rfile)\n",
+    "\n",
+    "fit_and_save_result(params, tempfilt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params = params_nored_001_WFS_sub\n",
+    "with open('tempfilt_nored_001.pickle', 'rb') as rfile:\n",
+    "    tempfilt = pickle.load(rfile)\n",
+    "\n",
+    "fit_and_save_result(params, tempfilt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params = params_reddened_001_WFS_sub\n",
+    "with open('tempfilt_reddened_001.pickle', 'rb') as rfile:\n",
+    "    tempfilt = pickle.load(rfile)\n",
+    "\n",
+    "fit_and_save_result(params, tempfilt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params = params_nored_001_WFS_sub_extcorrcat\n",
+    "with open('tempfilt_nored_001_extcorrcat.pickle', 'rb') as rfile:\n",
+    "    tempfilt = pickle.load(rfile)\n",
+    "\n",
+    "fit_and_save_result(params, tempfilt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params = params_reddened_001_WFS_sub_extcorrcat\n",
+    "with open('tempfilt_reddened_001_extcorrcat.pickle', 'rb') as rfile:\n",
+    "    tempfilt = pickle.load(rfile)\n",
+    "\n",
+    "fit_and_save_result(params, tempfilt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -2398,18 +2629,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.7"
   }
  },
  "nbformat": 4,
